Fix property text from edittext an explicit status to heald

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,12 @@
     <string name="app_name">IMC</string>
     <string name="result">Resultado</string>
     <string name="weight"> Ingrese su peso en kilos</string>
-    <string name="high"> Ingrese su altura en centimetros</string>
+    <string name="high"> Ingrese su altura en cm</string>
+    <string name="desnutricion"> Desnutricion, su IMC es:</string>
+    <string name="normal"> Normal, su IMC es:</string>
+    <string name="obesidad"> Obesidad, su IMC es:</string>
+    <string name="gordo"> Consulte su EPS, su IMC es:</string>
+    <string name="cero">0</string>
 
 
 </resources>
