--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="result">Resultado</string>
     <string name="weight"> Peso en kilos</string>
     <string name="high"> Altura en cm</string>
-    <string name="desnutricion"> Desnutricion, su IMC es:</string>
-    <string name="normal"> Normal, su IMC es:</string>
-    <string name="obesidad"> Obesidad, su IMC es:</string>
+    <string name="desnutricion"> Alerta! Desnutricion, su IMC es:</string>
+    <string name="normal"> Felicitaciones! Normal, su IMC es:</string>
+    <string name="obesidad"> Alerta! Obesidad, su IMC es:</string>
     <string name="eps"> Consulte su EPS, su IMC es:</string>
     <string name="cero">0</string>
     <string name="restar">Borrar</string>
