--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,9 +11,14 @@
     <string name="nameText">Enter Your Name</string>
     <string name="takeCare">"Take Care of Yourself"</string>
     <string name="autofill">Username</string>
-    <string name="btnImc">"Calculate "</string>
+    <string name="btnImc">"Calculate IMC "</string>
+    <string name="btnBp">"Blood Pressure "</string>
     <string name="result">Result</string>
     <string name="noOperation">Not Valid</string>
     <string name="app_name">BIM</string>
+    <string name="systole">Systole Value</string>
+    <string name="diastole">Diastole Value</string>
+
+
 
 </resources>
